...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="12dp"/>

        <EditText
            android:id="@+id/edit_text_elements"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:hint="Enter elements amount" />

        <EditText
            android:id="@+id/edit_text_threads"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:hint="Enter threads amount" />
        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="start"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"/>
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_collections_and_maps" />


</LinearLayout>
