...
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp">

    <TextView
        android:id="@+id/name_of_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Array"
        android:gravity="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/time_of_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="N/A ms"
        android:gravity="center"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"/>

</LinearLayout>
...
